# treble-core

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/scripts/: bench_compare.py
.github/workflows/: bench.yml  docs.yml  test.yml
benches/: graph.rs
examples/: advanced_plotting.rs  audio_merger.rs  compare_builin_spec.rs  drum_machine.rs  meta_test.rs  multi_kick.rs  one_note.rs  plot_chord.rs  plot_hihat.rs  plot_kick.rs  plot_snare.rs  score_playback.rs  waveform_plot.rs
src/: lib.rs
src/app/: audio_graph.rs  config.rs  graph_handler.rs  mod.rs
src/audio/: config.rs  events.rs  messages.rs  mod.rs  render_thread.rs  scheduler.rs  shared_state.rs
src/core/filters/: FILTERS_REVIEW.md
src/core/filters/dynamics/: amplifier.rs  clipper.rs  compressor.rs  limiter.rs
src/core/filters/frequency/: bandpass.rs  highpass.rs  lowpass.rs  (+2 more)
src/core/generator/: composite.rs  mod.rs  tone.rs
src/core/graph/: audio_node.rs  filter.rs  system.rs
src/core/utils/: note.rs
src/instruments/: mod.rs  spec.rs
src/instruments/drum/: hihat.rs  kick.rs  mod.rs  percussion.rs  snare.rs
src/instruments/keyboard/: keyboard.rs
src/instruments/synth/: mod.rs  synth.rs
src/meta/: mod.rs  traits.rs
src/plotting/: builder.rs  mod.rs  render.rs
src/score/: compiled_score.rs  instances.rs  measure.rs  score.rs
tests/integration/: app.rs  audio.rs  commands.rs  config.rs
tests/unit/: mod.rs
tests/unit/app/: audio_graph.rs  mod.rs
tests/unit/audio/: mod.rs
tests/unit/core/: audio.rs
tests/unit/instruments/: mod.rs  spec.rs
tests/unit/score/: mod.rs
(+12 files in other folders)
