[package]
name = "treble"
description = "Treble — modular real-time audio synthesis in Rust"
version = "0.2.0"
edition = "2024"

[dependencies]
atomic_float = "0.1"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
cpal = "0.15.3"
crossbeam = "0.8"
directories = "6.0.0"
dyn-clone = "1.0.18"
log = "0.4.22"
petgraph = "0.6.5"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.205", features = ["derive", "serde_derive"] }
simplelog = "0.12.2"
thiserror = "2.0.12"
toml = "0.8.22"
typetag = "0.2.21"
inventory = "0.3"
treble-derive = { git = "https://github.com/MinIndustry/treble-derive.git", tag = "0.1.0" }
treble-meta = { git = "https://github.com/MinIndustry/treble-meta.git", tag = "0.1.0" }
evdev = { version = "0.12.2", optional = true }
plotters = { version = "0.3.7", optional = true }
rayon = "1.11.0"

[dev-dependencies]
pretty_assertions = "1.1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph"
harness = false

[features]
plotting = ["plotters", ]
ts = ["treble-meta/ts"]
input = ["evdev"]

# Testing
slow-test = []

# Platforms
linux = ["input"]
macos = []
windows = []

# Default features
default = []
